# midi-bridge

./: .gitignore  Makefile  README.md  pyproject.toml
src/midi_bridge/: __main__.py  app.py  app.tcss  config.py  engine.py  models.py
tests/: test_app.py  test_config.py  test_engine.py  test_models.py
